# dguesser

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.api  Dockerfile.frontend  Dockerfile.realtime  Makefile  README.md  docker-compose.yml  justfile  mise.toml  railway.toml  rustfmt.toml
.github/workflows/: backup.yml  ci.yml
.sqlx/: query-0094dc8a141c2c10f8d7aca970776bcf66cf25a4c0cf8df2add117a8fab03bfd.json  query-01befd504c0fcc22b1a99dfaa4af0b9f104207a3b5508bb86d1b9bfa051e21f7.json  query-025e91a6588353ba3b59f07f69492b541e95b322c60a0b234a1b984e5763f401.json  query-0320f80c4381455d178de53e4c0018a85bb782272be950131642c8f2c60eceeb.json  query-04137ab3f2e143e274aa2a64e6dd2220af09bb1b13d6e5780e8743775632cf8a.json  query-052184250467d2b4189876cce574e1bd769f5700b214f20d1e8cab1edbfb9495.json  query-0ab55985c62b39cbf584a159d7e515dc69b9f175e23a55cb8479b8080a9612b9.json  query-0b8ce4f289363b4d92a2377deddedc2403dbff1feb4f70258616b482eb5060dc.json  query-0c3de3a2fcda272a96ff40a945d14821ec4d57a428f4df8a865c1957bcc741c7.json  query-0d8e10b593f95c2e85087535cc2a6c26e2779192e8774911c871e7b456c961db.json  query-14e404435118c7cdb644e1653545ec304b1a85d50356bf43141f89cf9b3ab955.json  query-158437824819a85183aa7e1c0a28d5fcb3723221cdc035bbafcbead3942eb1de.json  query-15963f91dd6f71aae5b3d1d7624f306a6b2775d3dff41fe31fc5d2651d6dd7af.json  query-168c5dc7c8d16496e7bc093ab89d1742d38069c28e4b521777d2e4c536962eb9.json  query-1ac97566548739f93daaf994c7107365ab2c97b1bc0d7867de3afbaa67875501.json  query-1cb791faea2fcfa2d38950a69aa5fab57aeb4bf1ced8db597134202c07f307e6.json  query-1dc6c9ef7b3c3e7473afba6d06cecf04a3b78ca3887b50a31f29cc71ef863f0c.json  query-1dcd61e07701436ba0d17919026ecab46549556ad3c85904dd0c985fb09eca8f.json  query-1dd12b3bf62387b1e95df31be7172e3855dcc66cccc5a7c6ccf8c8ec41b253c3.json  query-1ff0b874450a3573d817aee7014373e6ad555a5e37748cf9719eb45304c3a533.json  query-2077402f2d3c6d2cb06e7f936450a2e42f4ac4edf55ae84420167cb2896ee556.json  query-2983c7cb42db6ac19703992f35e0de32701281038586c60b81cdda35aa2a06ee.json  query-2b804e67dd144bae64571d6b97ea8be91d9e09d28191c5be022d8ec8c2e8c17d.json  query-2c44cc42e81877da4eef7a6bfc56aa91ba49450974c49ef4404a3b3a7cc1be11.json  query-2e749e30430daa1037fa8a9344b4ca288b960c37adae403de598b909f7329b75.json  query-2fea4f648ef5eb8008e81e3f88b101d5211cdf85284583d9257a3ff41a477f79.json  query-3033eca0ca58e5eb28c08e03a22e5761a3b8214b6f1f8c7d092de0bbf4667b7c.json  query-303894641a504410240ea19e8d493704560f893290454cffaeb9cfb6ede1ae1c.json  query-30f70386de0199ef1adee829ea10c8b59d33875c71c92be88a932554dd134e6f.json  query-330faba143f02841b7be1b8ef7c9224c3c1b610ec35012178baaf22254bbb150.json  query-36c20f9072ff8c62f9e59d194de43d34378f2de7a2622a004a29f620d80030e6.json  query-3a3f034a24d9b58e33440fde4a62777fd2c5e9eca6f22bb6315607a699fbbcf0.json  query-3bec69de3e2d447a7edbaa84389ca8a4441cdc3c71d685c5806fb59b22d50e1e.json  query-3c586537c1838f5a83acd2162d0ff51b083e7df3cfede7395ce53322de6ff81f.json  query-3cb2c66d4d620c8582eda24b1dca8657269725e1dfe2c090b200ce75565996e6.json  query-3d2d42ee110997f543b96ba0ab6cd6708c4ce553a39bb740bcb6a6df38a9ce1c.json  query-3d6ee4157b1c9a4324d2e1f122623cb16b847e0c98292b1e583e7c8c85b5a063.json  query-429b4234dd9fb2bca0af63a5b6559c8d3844a7cf8f055ec9dc0d1f2b16f4168d.json  query-454e5c9432a9bbaecbae16f1410c2b7be3fcc454f6be1be8a31bb96540485151.json  query-47517b1d3d4176a30e59be01b64b837f521e0ad843079401a80f09afe5d336a8.json  (+111 more)
crates/api/: Cargo.toml  build.rs  railway.toml
crates/api/src/: config.rs  error.rs  logging.rs  main.rs  socket.rs  state.rs
crates/api/src/cache/: co_players.rs  leaderboard.rs  mod.rs
crates/api/src/middleware/: client_ip.rs  mod.rs  rate_limit.rs  security_headers.rs
crates/api/src/routes/: auth.rs  games.rs  health.rs  leaderboard.rs  locations.rs  maps.rs  mod.rs  parties.rs  service.rs  sessions.rs  users.rs
crates/api/src/routes/admin/: mod.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs  middleware.rs  service.rs  session.rs
crates/auth/src/oauth/: google.rs  microsoft.rs  mod.rs  state_store.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  id.rs  lib.rs  session.rs  streetview.rs
crates/core/src/game/: commands.rs  events.rs  mod.rs  reducer.rs  rules.rs  scoring.rs  state.rs
crates/core/src/geo/: distance.rs  mod.rs
crates/core/src/location/: mod.rs  spread.rs  types.rs
crates/db/: Cargo.toml
crates/db/src/: games.rs  leaderboard.rs  lib.rs  locations.rs  oauth.rs  parties.rs  pool.rs  sessions.rs  users.rs
crates/locations/: Cargo.toml
crates/locations/src/: bucket.rs  cache.rs  error.rs  index.rs  lib.rs  manifest.rs  pack.rs  provider.rs  reader.rs
crates/protocol/: Cargo.toml
crates/realtime/: Cargo.toml  railway.toml
crates/realtime/src/: config.rs  emitter.rs  main.rs  rate_limit.rs  redis_state.rs  state.rs
crates/realtime/src/actors/: game_actor.rs  game_session.rs  mod.rs  party_actor.rs
crates/realtime/src/handlers/: auth.rs  game.rs  mod.rs  party.rs  room.rs
crates/seeder/: Cargo.toml
crates/seeder/src/: main.rs
data/: seed_locations.json
docs/: HANDOFF_VALI_INGESTION.md  R2-CDN-SETUP.md  RFC-shared-game-reducer.md
docs/impl-plan/: 00-overview.md  01-project-foundation.md  02-database-core.md  03-authentication.md  04-api-crate.md  05-realtime-crate.md  06-frontend-foundation.md  07-game-experience.md  08-polish-production.md
frontend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  railway.toml  svelte.config.js  tailwind.config.js
migrations/: 20250114000001_initial_schema.sql  20250115000001_leaderboard_indexes.sql  20250115000002_add_username_soft_delete.sql  20250115000003_locations_and_maps.sql  20250116000001_enhanced_locations.sql  20250117000001_add_user_roles.sql  20250118000001_user_created_maps.sql  20260115000001_disabled_locations.sql  20260116000001_extend_avatar_url.sql  20260116000002_add_rounds_heading.sql  20260117000001_extend_rounds_location_id.sql  20260117000002_drop_rounds_location_fk.sql  20260415000001_leaderboard_privacy.sql  20260415000002_parties.sql
(+113 files in other folders)
