[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/db",
    "crates/auth",
    "crates/protocol",
    "crates/api",
    "crates/realtime",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["DGuesser Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Socket.IO
socketioxide = { version = "0.15", features = ["state"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth/Crypto
oauth2 = "4"
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# Utilities
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"
config = "0.14"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Dev dependencies
tokio-test = "0.4"
