[package]
name = "dguesser-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
dguesser-core = { path = "../core" }
dguesser-db = { path = "../db" }
dguesser-auth = { path = "../auth" }
dguesser-protocol = { path = "../protocol" }

axum.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
config.workspace = true
redis.workspace = true
rand.workspace = true
validator.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

http = "1"
