[package]
name = "dguesser-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
once_cell.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rand_core.workspace = true
