[package]
name = "dguesser-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
dguesser-core = { path = "../core" }
sqlx.workspace = true
tokio.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde_json.workspace = true
serde.workspace = true
rand.workspace = true
ipnetwork = "0.20"
